--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,12 +1,52 @@
 /*MENGATUR RESPONSIVE*/
 /*Responsive di Smartphone*/
 @media screen and (max-width: 670px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .btn-nav:hover:before {
+    border-top: 0.3rem solid white;
+    border-bottom: 0.3rem solid white;
+    left: 0;
+  }
+
+  .jumbotron h1 {
+    font-size: 24px;
+  }
+
+  .jumbotron h2 {
+    font-size: 20px;
+  }
 
 }
 
 /*Responsive di Tablet*/
 @media screen and (max-width: 1000px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 
+  .btn-nav:hover:before {
+    border-top: 0.3rem solid white;
+    border-bottom: 0.3rem solid white;
+    left: 0;
+  }
+  .card-menu {
+    width: 50%;
+  }
+  .menu-container{
+    background-color: #aaa7a2;
+    height:1400px;
+  }
 
 }
 
@@ -15,8 +55,34 @@
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 /*JANGAN DIUBAH*/
 @media screen and (max-width: 670px) {
-  
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 @media screen and (max-width: 1000px) {
-  
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
