--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,41 @@
 * {
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Serif', serif;
+}
+/*SECTION MENU*/
+.menu-section{
+  background-color: #aaa7a2;
+  margin: 40px 0;
+  padding: 20px 30px;
+  color: white;
+  text-align: center;
+  font-size: normal;
+}
+.menu-container{
+  background-color: #aaa7a2;
+  height:950px;
+}
+.card-menu {
+  float: left;
+  width: 33%;
+  margin-top: 10px;
+}
+.card-menu img{
+  height: 420px;
+}
+.menu-item {
+  padding: 20px 0 40px 0;
+  width: 50%;
+  font-size: 18px;
+  margin: auto;
+  color: #444;
+}
+.menu-item-name {
+  font-size: 20px;
+  float: left;
+}
+.menu-item-price {
+  float: right;
 }
