--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,38 +4,39 @@
   padding: 0;
   font-family: 'PT Serif', serif;
 }
-/*SECTION MENU*/
-.menu-section{
-  background-color: #aaa7a2;
-  margin: 40px 0;
-  padding: 20px 30px;
-  color: white;
+
+.topnav {
+  background-color: #fff8e7;
+  overflow: hidden;
+  padding: 10px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #820024;
   text-align: center;
-  font-size: normal;
-}
-.menu-container{
-  background-color: #aaa7a2;
-  height:950px;
-}
-.card-menu {
-  float: left;
-  width: 33%;
-  margin-top: 10px;
-}
-.card-menu img{
-  height: 420px;
-}
-.menu-item {
-  padding: 20px 0 40px 0;
-  width: 50%;
+  padding: 14px 16px;
+  text-decoration: none;
   font-size: 18px;
-  margin: auto;
-  color: #444;
 }
-.menu-item-name {
-  font-size: 20px;
-  float: left;
+
+.topnav .icon {
+  display: none;
+  font-size: 35px;
 }
-.menu-item-price {
-  float: right;
+
+.topnav .logo {
+  font-family: 'Alex Brush';
+  font-size: 35px;
+  font-weight: bold;
 }
+
+.topnav .list-nav {
+  padding: 26px 16px;
+  letter-spacing: 2px;
+}
+
+
+/*CSS UNTUK HOME ATAU JUMB
