--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,122 @@ input,textarea{
 .form p{
     color:#fff8e7;
 }
+
+
+/* css for footer */
+footer {
+	background: #303036;
+	color: #d3d3d3;
+	margin: auto;
+	padding: 20px 0 0 0;
+	position: relative;
+}
+
+footer .footer-content {
+	height: auto;
+	display: flex;
+}
+
+footer .footer-content .footer-section {
+	flex: 1;
+	margin-left: 50px;
+}
+
+footer li {
+	list-style-type: none;
+}
+
+footer .container {
+	padding: 0;
+}
+
+.footer-section h5 {
+	font-size: 20px;
+}
+
+.tentang {
+	padding: 0 20px;
+}
+
+.tentang p {
+	line-height: 1.3;
+	padding-right: 20px;
+}
+
+.copyright {
+	background: #343a40;
+	color: #fff;
+	height: 20%;
+	text-align: center;
+	bottom: 0;
+	left: 0;
+	padding: 30px;
+}
+
+.fa {
+	margin-right: 5px;
+}
+
+.social span {
+	margin: 5px;
+}
+
+.social a {
+	color: #fff;
+	margin-left: 5px;
+}
+
+.social .fa-facebook {
+	margin-right: 11px;
+}
+
+.social .fa-instagram {
+	margin-right: 8px;
+}
+
+.social ul {
+	padding-left: 0px;
+}
+
+.fb:hover .fa-facebook {
+	color: #3b5998;
+}
+
+.tw:hover .fa-twitter {
+	color: #55acee;
+}
+
+.ig:hover .fa-instagram {
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.fa-facebook,
+.fa-twitter,
+.fa-instagram {
+	font-size: 18px !important;
+}
+
+.products {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	padding: 20px;
+	padding-bottom: 10px;
+	width: 1200px%;
+	max-width: 1200px;
+	margin: auto;
+}
+
+.product {
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 20px;
+	text-align: center;
+	margin: 10px;
+	width: auto;
+}
+
+.product img {
+	width: 80%;
+}
