--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -22,6 +22,30 @@
   .jumbotron h2 {
     font-size: 20px;
   }
+  
+  .footer-content {
+		height: auto;
+		flex-direction: column;
+	}
+	.tentang{
+		text-align: center;
+	}
+
+	.footer-section {
+		padding: 0 20px;
+	}
+
+	.footer-section h5 {
+		text-align: center;
+	}
+
+	.social li {
+
+		text-align: center;
+		width: 100%;
+		max-width: 670px;
+		padding: 0 auto;
+	}
 
 }
 
@@ -47,6 +71,11 @@
     background-color: #aaa7a2;
     height:1400px;
   }
+  
+  .footer-content {
+		height: auto;
+		display: inline-block;
+	}
 
 }
 
