--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,70 @@
 }
 
 /*HOME DAN JUMBOTRON SELESAI*/
+/*MAIN SECTION*/
+.main h1{
+  font-family: 'Alex Brush';
+  font-size:52px;
+}
+.main {
+  background-color: #fff;
+  text-align:center;
+}
+.text{
+  padding:40px 0 0 0;
 
+}
+.text-2{
+  padding:50px 0 0 0;
+}
+
+.container{
+  max-width:1170px;
+  width:100%;
+  margin:0 auto;
+
+}
+.img{
+  height:332px;
+  width:auto;
+  display:inline-block;
+}
+.img-2{
+  padding-bottom:70px;
+
+}
+.container-2{
+  border-bottom:2px solid #eee;
+  max-width:1170px;
+  width:100%;
+  margin:0 auto;
+}
+
+
+.button{
+  display:inline-block;
+  padding:91px 114px;
+  color:white;
+  background-color:black;
+  background-size: cover;
+  margin-left:30px;
+  margin-right: 30px;
+  font-size:30px;
+}
+.lists{
+  margin-top:70px;
+}
+
+.a:hover{
+  background-image:url(https://drive.google.com/file/d/11vIh9-QW4P2ioavdA_MLw4uYPnnkldPb/view?usp=sharing);
+}
+.b:hover{
+  background-image:url(https://drive.google.com/file/d/17hHINTJFKKcoL38gQEI5W19vWU9xjC_n/view?usp=sharing);
+}
+.c:hover{
+  background-image:url(https://drive.google.com/file/d/1zRdVi5iOnQyAQtdpaIDmTAXb_NmO3HGF/view?usp=sharing);
+}
+/*MAIN END*/
 /*SECTION MENU*/
 .menu-section{
   background-color: #aaa7a2;
