--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,13 +174,13 @@
 }
 
 .a:hover{
-  background-image:url(https://drive.google.com/file/d/11vIh9-QW4P2ioavdA_MLw4uYPnnkldPb/view?usp=sharing);
+  background-image:url(1.jpg);
 }
 .b:hover{
-  background-image:url(https://drive.google.com/file/d/17hHINTJFKKcoL38gQEI5W19vWU9xjC_n/view?usp=sharing);
+  background-image:url(2.jpg);
 }
 .c:hover{
-  background-image:url(https://drive.google.com/file/d/1zRdVi5iOnQyAQtdpaIDmTAXb_NmO3HGF/view?usp=sharing);
+  background-image:url(3.jpg);
 }
 /*MAIN END*/
 /*SECTION MENU*/
