add scrool behavior
kiddie smooth scrolling:")

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
   font-family: 'PT Serif', serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .topnav {
   background-color: #fff8e7;
   overflow: hidden;
